# vanitysearch-pocx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  build.rs  networks.toml
.github/workflows/: release.yml
agent_docs/: 00_overview.md  01_data_structures.md  02_crypto.md  03_gpu_detection.md  04_cuda_backend.md  05_opencl_backend.md  06_search_main.md  07_tests.md  08_quick_reference.md
benches/: throughput.rs
cuda/: GPUBech32.cu  GPUBech32.h
opencl/: bech32_kernel.cl  group.cl  hash.cl  math.cl
src/: bech32.rs  config.rs  lib.rs  main.rs  output.rs  pattern.rs  result.rs  search.rs  tests.rs  wif.rs
src/crypto/: bech32_utils.rs  mod.rs  secp256k1_utils.rs
src/gpu/: detect.rs  mod.rs
src/gpu/cuda/: context.rs  mod.rs
src/gpu/cuda/kernels/: vanity.cu
src/gpu/opencl/: context.rs  mod.rs
src/gpu/opencl/kernels/: vanity.cl
src/hash/: mod.rs  ripemd160.rs  sha256.rs
src/search/: cpu.rs  gpu.rs  mod.rs  opencl.rs
src/secp256k1/: field.rs  mod.rs  point.rs  scalar.rs
tests/: crypto_tests.rs  known_vectors.rs
